fix: (1) get problem by theme using theme id rather than theme text

--- a/static/html/theme.html
+++ b/static/html/theme.html
@@ -11,11 +11,11 @@
         <span style="font-size: large; ">Volume</span>
         {% for volume in problemVolumes %}
             {% ifequal problemVolume volume %}
-            <a href="getProblemByTheme?theme={{ theme }}&volume={{ volume }}">
+            <a href="getProblemByTheme?theme={{ themeId }}&volume={{ volume }}">
                 <span style="font-size: large; color: red">{{volume}}</span>
             </a>
             {% else %}
-            <a href="getProblemByTheme?theme={{ theme }}&volume={{ volume }}">
+            <a href="getProblemByTheme?theme={{ themeId }}&volume={{ volume }}">
                 <span style="font-size: large;">{{volume}}</span>
             </a>
             {% endifequal %}
