答辩结束，最后一次提交. OUT.

--- a/static/html/teacher_index.html
+++ b/static/html/teacher_index.html
@@ -1,4 +1,8 @@
 {% extends 'index.html' %}
+{% block searchDIV %}
+
+{% endblock %}
+
 {% block registerLinkBlock %}
     {% if request.session.checkTeacherSignin %}
          <div class="pull-right">
