--- a/static/html/index.html
+++ b/static/html/index.html
@@ -14,6 +14,9 @@
                 <h1>EFP Online Judge</h1>
                 <p class="lead">Element Fill-in-blank Problem Online Judge</p>
             </div>
+            {% block searchDIV %}
+
+
             <div class="col-md-4">
                     <form class="form-inline" role="form" method="get" style="margin-top: 60px" action="getProblemListBy">
                         <div class="form-group">
@@ -36,6 +39,7 @@
                     </form>
             </div>
 
+            {% endblock %}
 
             {% block registerLinkBlock %}
                 {% if request.session.checkSignin %}
